--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 ---
 layout: default
 ---
+<p>Under Construction</p>
 <!-- Posts -->
-<ul id="posts">
+<!--<ul id="posts">
 
 	{% for post in paginator.posts %}
 
@@ -14,4 +15,4 @@ layout: default
 
     {% endfor %}
 
-</ul>
+</ul>-->
